extends Panel

## ç»“æœåé¦ˆé¢æ¿
## æ˜¾ç¤ºå…³å¡å®Œæˆåçš„è¯„åˆ†å’Œåé¦ˆ

signal next_level_pressed
signal retry_pressed

var current_result: Dictionary = {}
var current_grade: String = ""
var current_chain: Array[String] = []

@onready var grade_label = $VBox/GradeLabel
@onready var completeness_bar = $VBox/CompletenessBar
@onready var strength_bar = $VBox/StrengthBar
@onready var cleanliness_bar = $VBox/CleanlinessBar
@onready var comment_label = $VBox/CommentLabel
@onready var unlock_label = $VBox/UnlockLabel
@onready var next_button = $VBox/Buttons/NextButton
@onready var retry_button = $VBox/Buttons/RetryButton
@onready var share_button = $VBox/Buttons/ShareButton

func _ready():
	visible = false
	next_button.pressed.connect(_on_next_pressed)
	retry_button.pressed.connect(_on_retry_pressed)
	if share_button:
		share_button.pressed.connect(_on_share_pressed)

## æ˜¾ç¤ºç»“æœ
func show_result(result: Dictionary, grade: String):
	visible = true
	current_result = result
	current_grade = grade
	current_chain = result.get("chain", [])
	
	# æ£€æŸ¥ç­‰çº§æå‡
	var previous_grade = SaveGame.get_level_grade(GameManager.current_level_id)
	var grade_improved = _is_grade_improved(previous_grade, grade)
	
	# è®¾ç½®è¯„çº§
	grade_label.text = _get_grade_symbol(grade)
	grade_label.modulate = _get_grade_color(grade)
	
	# å¦‚æœç­‰çº§æå‡ï¼Œæ’­æ”¾åŠ¨ç”»
	if grade_improved and grade != "FAIL":
		_play_grade_up_animation()
	
	# è®¡ç®—å¹¶æ˜¾ç¤ºæŒ‡æ ‡
	var completeness = _calculate_completeness(result)
	var strength_ratio = result.get("strength", 0.0) / result.get("required_strength", 1.0)
	var cleanliness = _calculate_cleanliness(result, grade)
	
	# åŠ¨ç”»æ˜¾ç¤ºè¿›åº¦æ¡
	_animate_bars(completeness, strength_ratio, cleanliness)
	
	# æ˜¾ç¤ºè¯„è¯­
	comment_label.text = _get_comment(grade)
	
	# æ£€æŸ¥å…±æŒ¯ã€è·¯å¾„å’Œè§£é”
	var unlock_texts = []
	
	# æ˜¾ç¤ºè·¯å¾„ä¿¡æ¯
	if result.has("path_info") and result.path_info.get("matched", false):
		var path_name = result.path_info.get("path_name", "")
		var is_new = result.path_info.get("is_new", false)
		if is_new:
			unlock_texts.append("ğŸ›¤ï¸ å‘ç°æ–°è·¯å¾„ï¼š" + path_name + "ï¼ˆ+20%å¥–åŠ±ï¼‰")
		else:
			unlock_texts.append("ğŸ›¤ï¸ è·¯å¾„ï¼š" + path_name)
	
	# æ˜¾ç¤ºå…±æŒ¯ä¿¡æ¯
	if result.has("resonances") and not result.resonances.is_empty():
		for resonance in result.resonances:
			if resonance.get("is_new", false):
				unlock_texts.append("âœ¨ " + resonance.get("name", "") + "ï¼š" + resonance.get("unlock_text", ""))
			else:
				unlock_texts.append("ğŸ’« " + resonance.get("name", "") + "ï¼ˆå·²è§£é”ï¼‰")
	
	# æ£€æŸ¥å…¶ä»–è§£é”
	if result.has("unlocks"):
		unlock_texts.append("ğŸ " + result.unlocks)
	
	if not unlock_texts.is_empty():
		unlock_label.text = "\n".join(unlock_texts)
		unlock_label.visible = true
	else:
		unlock_label.visible = false

func _is_grade_improved(old_grade: String, new_grade: String) -> bool:
	if old_grade.is_empty():
		return new_grade != "FAIL"
	
	var grade_values = {"S": 4, "A": 3, "B": 2, "FAIL": 0}
	var old_value = grade_values.get(old_grade, 0)
	var new_value = grade_values.get(new_grade, 0)
	return new_value > old_value

func _play_grade_up_animation():
	# ç­‰çº§æå‡åŠ¨ç”»ï¼šç¼©æ”¾ + é¢œè‰²é—ªçƒ
	var tween = create_tween()
	tween.set_parallel(true)
	
	# ç¼©æ”¾è„‰å†²
	tween.tween_property(grade_label, "scale", Vector2(1.3, 1.3), 0.2).set_ease(Tween.EASE_OUT)
	tween.tween_property(grade_label, "scale", Vector2(1.0, 1.0), 0.2).set_delay(0.2).set_ease(Tween.EASE_IN)
	
	# é¢œè‰²é—ªçƒï¼ˆé‡‘è‰²ï¼‰
	var original_color = grade_label.modulate
	tween.tween_property(grade_label, "modulate", Color(1.0, 0.84, 0.0), 0.2)
	tween.tween_property(grade_label, "modulate", original_color, 0.2).set_delay(0.2)

func _get_grade_symbol(grade: String) -> String:
	if I18nManager:
		match grade:
			"S": return I18nManager.translate("ui.result_panel.grade_s")
			"A": return I18nManager.translate("ui.result_panel.grade_a")
			"B": return I18nManager.translate("ui.result_panel.grade_b")
			_: return I18nManager.translate("ui.result_panel.grade_fail")
	else:
		match grade:
			"S": return "â–ˆâ–ˆâ–ˆ S çº§"
			"A": return "â–ˆâ–ˆâ–‘ A çº§"
			"B": return "â–ˆâ–‘â–‘ B çº§"
			_: return "â–‘â–‘â–‘ æœªé€šè¿‡"

func _get_grade_color(grade: String) -> Color:
	match grade:
		"S": return Color(1.0, 0.84, 0.0)  # é‡‘è‰²
		"A": return Color(0.75, 0.75, 0.75)  # é“¶è‰²
		"B": return Color(0.8, 0.5, 0.2)  # é“œè‰²
		_: return Color(0.5, 0.5, 0.5)

func _calculate_completeness(result: Dictionary) -> float:
	# åŸºäºæ˜¯å¦æœ‰é”™è¯¯æ¥åˆ¤æ–­å®Œæ•´åº¦
	if result.get("errors", []).is_empty():
		return 1.0
	else:
		# æœ‰é”™è¯¯åˆ™é™ä½å®Œæ•´åº¦
		return max(0.0, 1.0 - (result.errors.size() * 0.2))

func _calculate_cleanliness(result: Dictionary, grade: String) -> float:
	# åŸºäºè¯„çº§åˆ¤æ–­æ´å‡€åº¦
	match grade:
		"S": return 1.0
		"A": return 0.8
		"B": return 0.6
		_: return 0.3

func _animate_bars(completeness: float, strength_ratio: float, cleanliness: float):
	var tween = create_tween()
	tween.set_parallel(true)
	
	tween.tween_property(completeness_bar, "value", completeness * 100, 0.5)
	tween.tween_property(strength_bar, "value", clamp(strength_ratio * 100, 0.0, 100.0), 0.5)
	tween.tween_property(cleanliness_bar, "value", cleanliness * 100, 0.5)

func _get_comment(grade: String) -> String:
	if I18nManager:
		match grade:
			"S": return I18nManager.translate("ui.result_panel.comment_s")
			"A": return I18nManager.translate("ui.result_panel.comment_a")
			"B": return I18nManager.translate("ui.result_panel.comment_b")
			"FAIL": return I18nManager.translate("ui.result_panel.comment_fail")
			_: return ""
	else:
		var comments = {
			"S": "ä½ æ„å»ºäº†ä¸€æ¡é«˜åº¦è‡ªæ´½çš„ç³»ç»Ÿæ€§å› æœé“¾ã€‚\nåœ¨ç°å®ä¸–ç•Œä¸­ï¼Œè¿™ç§æ¨ç†èƒ½åŠ›æå…¶ç¨€ç¼ºã€‚",
			"A": "é€»è¾‘æˆç«‹ï¼Œä½†ä½ å¿½ç•¥äº†è‡³å°‘ä¸€ä¸ªå…³é”®ä¸­ä»‹ã€‚\nè¯•è¯•èƒ½å¦æ‰¾åˆ°æ›´å®Œæ•´çš„è·¯å¾„ï¼Ÿ",
			"B": "ç›¸å…³æ€§è¢«å½“æˆäº†å› æœæ€§ã€‚\nè¿™æ˜¯äººç±»æœ€å¸¸è§çš„æ¨ç†é™·é˜±ã€‚",
			"FAIL": "å› æœé“¾å­˜åœ¨æ–­è£‚æˆ–é€»è¾‘å†²çªã€‚\né‡æ–°å®¡è§†èŠ‚ç‚¹ä¹‹é—´çš„è¿æ¥å…³ç³»ã€‚"
		}
		return comments.get(grade, "")

func _on_next_pressed():
	next_level_pressed.emit()
	visible = false

func _on_retry_pressed():
	retry_pressed.emit()
	visible = false

func _on_share_pressed():
	if current_chain.is_empty():
		return
	
	# ç”Ÿæˆåˆ†äº«æ–‡æœ¬
	var share_text = ShareManager.generate_share_text(
		GameManager.current_level_id,
		current_chain,
		current_grade,
		current_result
	)
	
	# å¤åˆ¶åˆ°å‰ªè´´æ¿
	ShareManager.copy_to_clipboard(share_text)
	
	# æ˜¾ç¤ºæç¤ºï¼ˆå¯ä»¥æ‰©å±•ä¸ºToastæç¤ºï¼‰
	print("åˆ†äº«å†…å®¹å·²å¤åˆ¶åˆ°å‰ªè´´æ¿")
